# DiffordsFinder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
diffords_finder/: __init__.py  cli.py  constants.py  diffords_ingredients.py  diffords_search.py
diffords_finder/cli/: __init__.py  simple.py
diffords_finder/core/: __init__.py  constants.py  scraper.py  search.py
diffords_finder/models/: __init__.py  cocktail.py
diffords_finder/utils/: __init__.py  exceptions.py  formatting.py  logger.py
