[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffords-finder"
version = "1.0.0"
description = "CLI tool for finding cocktail recipes from Difford's Guide"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["cocktails", "recipes", "diffordsguide", "cli", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
    "types-beautifulsoup4",
]

[project.scripts]
diffords = "diffords_finder.cli.simple:main"
diffords-advanced = "diffords_finder.cli.advanced:main"

[project.urls]
Homepage = "https://github.com/yourusername/diffords-finder"
Documentation = "https://diffords-finder.readthedocs.io"
Repository = "https://github.com/yourusername/diffords-finder"
Issues = "https://github.com/yourusername/diffords-finder/issues"

[tool.setuptools.packages.find]
include = ["diffords_finder*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # Allow assert statements in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=diffords_finder --cov-report=html --cov-report=term"
testpaths = ["tests"]